--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
   <body>
     <div class="cats-wrapper">
         <div class="first-cat-container">
-            <div id="first-cat-image"></div>
+            <div class="first-cat-image"></div>
             <div class="first-cat-info">
               <div>
-                <div id="first-cat-origin"></div>
-                <div id="first-cat-name"></div>
-                <div id="first-cat-description"></div>
-                <button id="first-cat-wiki-button">MORE INFUR</button>
+                <div class="first-cat-origin"></div>
+                <div class="first-cat-name"></div>
+                <div class="first-cat-description"></div>
+                <button class="first-cat-wiki-button">MORE INFUR</button>
               </div>
             </div>
         </div>
         <div class="second-cat-container">
             <div class="second-cat-info">
               <div>
-                <div id="second-cat-origin"></div>
-                <div id="second-cat-name"></div>
-                <div id="second-cat-description"></div>
-                <button id="second-cat-wiki-button">MEOW INFO</button>
+                <div class="second-cat-origin"></div>
+                <div class="second-cat-name"></div>
+                <div class="second-cat-description"></div>
+                <button class="second-cat-wiki-button">MEOW INFO</button>
               </div>
             </div>
-            <div id="second-cat-image"></div>
+            <div class="second-cat-image"></div>
         </div>
     <div>
   </body>
