first and second container refactored with vanilla

--- a/index.html
+++ b/index.html
@@ -5,22 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Mr. Meowgi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./styles/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./styles/style.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="main.js"></script>
   </head>
   <body>
-    <div class="cats-wrapper">
-        <div class="first-cat-container">
-            <div class="first-cat-image"></div>
-            <div class="first-cat-info">
-              <div>
-                <div class="first-cat-origin"></div>
-                <div class="first-cat-name"></div>
-                <div class="first-cat-description"></div>
-                <button class="first-cat-wiki-button">MORE INFUR</button>
-              </div>
-            </div>
-        </div>
+    <div class="cats-wrapper"></div>
   </body>
 </html>
