--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
   </head>
   <body>
     <div class="cats-wrapper"></div>
