refactored and cleaned up styling with reusable classes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <script defer src="main.js"></script>
   </head>
   <body>
-    <div class="cats-wrapper"></div>
+    <div class="cats-wrapper flex-center"></div>
   </body>
 </html>
